# pdfium-helper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  compress-pdfium.ps1  rust-toolchain.toml
.github/workflows/: release-opencc-rs.yml
examples/: use_chunk_ABC_reflow.rs  use_fish_reflow.rs  use_pdfium_extract_and_reflow_progress.rs  use_pdfium_extract_only_progress.rs
pdfium/linux-arm64/: libpdfium.so.zst
pdfium/linux-x64/: libpdfium.so.zst
pdfium/macos-arm64/: libpdfium.dylib.zst
pdfium/macos-x64/: libpdfium.dylib.zst
pdfium/win-arm64/: pdfium.dll.zst
pdfium/win-x64/: pdfium.dll.zst
pdfium/win-x86/: pdfium.dll.zst
scripts/: build-default.cmd  build-nightly-win7-x64-pdfium-embed.cmd  build-nightly-win7-x64.cmd  build-stable.cmd  build_nightly_win7_x86.cmd
src/: cjk_text.rs  lib.rs  pdfium_loader.rs  pdfium_text.rs  punct_sets.rs  reflow_helper.rs  utils.rs
tests/: chunk_abc.txt  decode_contract.rs  pdfium_regression.rs  鱼在我这里.txt
tools/opencc-rs/: Cargo.toml  OneDay.docx  Oneday.xlsx  README.md  build.rs
tools/opencc-rs/src/: main.rs
tools/opencc-rs/src/office_converter/: converter.rs  mod.rs
