[workspace]
members = [
    "tools/opencc-rs"
]

[package]
name = "pdfium-helper"
version = "0.1.1"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
libloading = "=0.8"
thiserror = "2.0"
anyhow = "1.0"
smallvec = "=1.15"
zstd = "0.13"
regex = "1.12"

[features]
default = []
# Turn on integration tests that require an actual pdfium binary present
integration = []
pdfium-embed = []

# Default: heavy optimization for libraries (C API performance)
[profile.release]
opt-level = 3              # Maximize speed (better suited for C API performance)
codegen-units = 1          # Optimize across the entire codebase for better performance
lto = "fat"                # Full Link Time Optimization for improved binary performance
panic = "abort"            # Prevents Rust panics from unwinding, reducing binary size
incremental = false        # Disable incremental builds to fully optimize the release binary
strip = "symbols"          # Strips debug symbols while retaining export symbols needed for the C API
debug = 0                  # No debug info in the final binary to reduce size
