[package]
name = "opencc-rs"
version = "0.8.3"
edition = "2021"

[dependencies]
clap = "4.5.53"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
regex = "1.12.2"
# Keep zip MSRV-safe for 1.75 (3.x, not 4.x):
zip = ">=3.0, <4.0"
tempfile = "3.24.0"
walkdir = "2.5.0"
opencc-fmmseg = "0.8.3"
pdfium-helper = {path="../.."}
#crc= "=3.3.0"
#time = "=0.3.41"
#indexmap = "=2.11.4"

[build-dependencies]
winres = "0.1.12"