[package]
name = "opencc-rs"
version = "0.8.4"
edition = "2021"

[dependencies]
clap = "4.5.54"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
regex = "1.12.2"
# Keep zip MSRV-safe for 1.75 (3.x, not 4.x):
zip = { version = "=3.0.0", default-features = false, features = ["deflate"] }
#zip = "=3.0.0"
#indexmap = "=2.11.4"
#crc = "=3.3.0"
#time = "=0.3.41"
#time-core = "=0.1.4"
tempfile = "3.24.0"
walkdir = "2.5.0"
opencc-fmmseg = "0.8.4"
pdfium-helper = {path="../.."}

[build-dependencies]
winres = "0.1.12"